--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,8 @@
     <a class="page-link" href="/diego//objetivos/index.html">|Objetivos|</a>
     <a class="page-link" href="/diego//app/index.html">|App|</a>
     <a class="page-link" href="/diego//presentaciones/index.html">|Presentaciones|</a>
-    <a class="page-link" href="/diego//hobbie-bicicleta/index.html">|Hobbie-Bicicleta|</a>
+    <a class="page-link" href="/diego//hobbie-bicicleta/index.html">|Hobbie-Bicicleta|</a> 
+    <a class="page-link" href="/diego//bibliografia/index.html">|Bibliografía|</a>
  
    
     
